# Prompture

./: .buildinfo  .env.copy  .gitignore  .safety-project.ini  BREAKING_CHANGES.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  PROMPTURE_FEEDBACK.md  README.md  ROADMAP.md  SECURITY.md  VERSION  cacao.yaml  contributing.html  dev.ps1  dev.sh  examples.html  field_definitions_reference.html  genindex.html  index.html  installation.html  mypy_errors.txt  objects.inv  prompture_cost_tracking.md  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  setup.py  test.py  toon_input_guide.html  toon_token_analysis.md
.claude/skills/: add-driver.md  add-example.md  add-field.md  add-test.md  run-tests.md  scaffold-extraction.md  update-pricing.md
.doctrees/: contributing.doctree  environment.pickle  examples.doctree  field_definitions_reference.doctree  index.doctree  installation.doctree  quickstart.doctree  toon_input_guide.doctree
.doctrees/api/: core.doctree  drivers.doctree  field_definitions.doctree  index.doctree  runner.doctree  tools.doctree  validator.doctree
.github/ISSUE_TEMPLATE/: config.yml  pricing_cost_mismatch.yml  provider_driver_bug.yml  schema_extraction_failure.yml
.github/scripts/: update_docs_version.py
.github/workflows/: dev.yml  publish.yml  security.yml
_sources/: index.rst.txt
_sources/api/: drivers.rst.txt
_static/: documentation_options.js
api/: core.html  drivers.html  field_definitions.html  index.html  runner.html  tools.html  validator.html
docs/: MULTIMODAL.md  requirements.txt  testing.md
docs/source/: index.rst  migration.rst  stability.rst  test_harness.rst  why_prompture.rst
examples/: agent_example.py  async_agent_example.py  auto_example.py  azure_example.py  batch_processing_example.py  cachibot_example.py  claude_example.py  discovery_example.py  document_ingestion_example.py  driver_test_example.py  ecommerce_product_example.py  field_definitions.json  field_definitions.yaml  field_definitions_example.py  financial_document_example.py  google_example.py  grok_example.py  groq_example.py  lm_studio_example.py  lmstudio_reasoning_example.py  medical_record_example.py  moonshot_example.py  moonshot_tool_calling_example.py  ollama_example.py  ollama_models_comparison.py  ollama_reasoning_example.py  openai_example.py  openai_models_comparison.py  openrouter_example.py  openrouter_reasoning_example.py  output_format_comparison.py  persistence_example.py  pydantic_model_example.py  resume_cv_example.py  social_media_example.py  stepwise_vs_manual_comparison.py  text_analysis_example.py  text_analysis_example_v2.py  text_example.py  token_comparison_utility.py  (+3 more)
prompture/: __init__.py  _version.py  agent.py  agent_types.py  async_agent.py  async_conversation.py  async_core.py  async_driver.py  async_groups.py  cache.py  callbacks.py  cli.py  consensus.py  conversation.py  core.py  discovery.py  driver.py  exceptions.py  group_types.py  groups.py  history.py  model_rates.py  persona.py  pipeline.py  routing.py  serialization.py  session.py  settings.py  simulated_tools.py  skills.py  tools.py  tools_schema.py  tukuy_bridge.py
specs/: basic_extraction.json  schema_validation.json  strategy_comparison.json
tests/: conftest.py  test_agent.py  test_analysis.py  test_async_conversation.py  test_async_core.py  test_async_drivers.py  test_async_groups.py  test_audio_content.py  test_audio_registry.py  test_autopick_driver.py  test_azure_backends.py  test_azure_config.py  test_budget.py  test_cache.py  test_cachibot_api.py  test_callbacks.py  test_cli.py  test_consensus.py  test_conversation.py  test_core.py  test_debate.py  test_discovery.py  test_driver_messages.py  test_driver_registry.py  test_enhanced_extraction.py  test_extract_with_models.py  test_field_definitions.py  test_groups.py  test_history.py  test_img_gen.py  test_ingestion.py  test_json_mode.py  test_ledger.py  test_list_models.py  test_logging.py  test_model_lifecycle.py  test_model_rates.py  test_persistence.py  test_persona.py  test_pipeline.py  (+22 more)
(+165 files in other folders)
