[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# Do not try to "guess next dev" from tags like X.Y.Z.dev4
version_scheme = "no-guess-dev"
# Avoid local +g<hash> suffixes for cleaner installs
local_scheme = "no-local-version"
# If SCM parsing fails entirely, use this
fallback_version = "0.0.23.dev1"