[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompture"
description = "Ask LLMs to return structured JSON and run cross-model tests. API-first."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Juan Denis", email = "juan@vene.co" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "click>=8.0",
    "httpx>=0.25.0",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=0.19.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.55.0"]
anthropic = ["anthropic>=0.8.0"]
google = ["google-genai>=1.0.0"]
groq = ["groq>=0.4.0"]
toon = ["python-toon>=0.1.0", "tukuy==0.0.30"]
pandas = ["pandas>=1.3.0"]
requests = ["requests>=2.28"]
all = [
    "prompture[openai,anthropic,google,groq,toon,pandas,requests]",
]
test = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "prompture[all]"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "ruff>=0.8.0", "prompture[all]"]
airllm = ["airllm>=2.8.0"]
ingest = [
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "python-docx>=0.8.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "openpyxl>=3.1.0",
]
redis = ["redis>=4.0"]
serve = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "sse-starlette>=1.6"]
scaffold = ["jinja2>=3.0"]

[project.scripts]
prompture = "prompture.cli.cli:cli"

[project.urls]
Homepage = "https://github.com/jhd3197/prompture"

# Entry point groups for plugin driver discovery
# Third-party packages can register drivers by defining entry points in these groups:
#
# [project.entry-points."prompture.drivers"]
# my_provider = "my_package.drivers:create_driver"
#
# [project.entry-points."prompture.async_drivers"]
# my_provider = "my_package.drivers:create_async_driver"

[tool.setuptools.packages.find]
include = ["prompture*"]
exclude = ["prompture-env*"]

[tool.setuptools.package-data]
prompture = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
version_file = "prompture/_version.py"
fallback_version = "1.0.0"

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = ["prompture/_version.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "SIM108", "UP007", "RUF012", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405", "E402"]
"prompture/agents/async_agent.py" = ["E402"]
"tests/**" = ["E501", "B011", "RUF043", "SIM105", "SIM117"]
"test.py" = ["E501", "B011"]
"examples/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: marks tests that use real LLM APIs"]
addopts = "-v"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = [
    "airllm.*",
    "docx",
    "fitz",
    "importlib_metadata",
    "jsonschema",
    "lxml.*",
    "openpyxl",
    "pandas",
    "pdfplumber",
    "pymupdf",
    "pypdf",
    "PyPDF2",
    "redis.*",
    "requests",
    "toon",
    "transformers",
    "tukuy.*",
    "yaml",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prompture.cli.scaffold.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B104", "B110", "B112", "B615"]
